# bot-boilerplate

./: .gitignore  Dockerfile  README.md  config.yml  domain.yml  pyproject.toml  requirements.txt
data/nlu/: default_chitchat.yml  nlu.yml
data/responses/: chitchat.yml
data/rules/: rules.yml
